<resources>
    <string name="app_name">Coinz</string>
    <string name="title_activity_main">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_bank">Bank</string>
    <string name="title_activity_wallet">Wallet</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
...
